# ANI_Subtitle

./: .gitignore  README.md
backend/: ai_services.py  check_models.py  config.py  main.py  media_utils.py  pipeline.py  pyproject.toml  requirements.txt  task_store.py
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: Dashboard.tsx
